hphp/test/zend/bad/ext/date/tests/date_default_timezone_get-2.php
<?php
	putenv('TZ=');
	echo date_default_timezone_get(), "\n";
?>